travel site & changes on review sites

--- a/03_CSS/DAY_04/Book_Gallery/Index.html
+++ b/03_CSS/DAY_04/Book_Gallery/Index.html
@@ -52,7 +52,7 @@
     <footer>
         <div class="row1">
             <div class="col1">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31411.913093747837!2d76.1804166788277!3d10.222076953263622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b081bea3d5a8b29%3A0x4c3b722cea99e6b0!2sKodungallur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1716026087931!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31411.913093747837!2d76.1804166788277!3d10.222076953263622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b081bea3d5a8b29%3A0x4c3b722cea99e6b0!2sKodungallur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1716026087931!5m2!1sen!2sin" width="800px" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <div class="col2">
                 <h3>Contact us</h3>
@@ -60,6 +60,7 @@
                 <p>PH: 953596458265</p>
                 <p>Address: kodugaloor</p>
             </div>
+            
         </div>
     </footer>
 </body>
