--- a/TASK/Travel Site/index.html
+++ b/TASK/Travel Site/index.html
@@ -28,14 +28,30 @@
 
 </head>
 <body>
-    <header class="container-fluid">
-        <nav class="d-flex justify-content-between align-items-center">
+    <header class="">
+        <nav class=" container-fluid d-flex justify-content-between align-items-center">
             <div class="logo d-flex">
                 <img src="./icon/logo.png"  height="60px">
                 <h3 class="mt-4">Nomadic Winds</h3>
             </div>
-            <div>sad</div>
+            <div class="leftnav d-flex">
+                <div class="menu mt-5">
+                    <ul type="none" class="d-flex list justify-content-evenly">
+                        <li><a href="#hero">DESTINATIONS</a></li>
+                        <li><a href="#def">TRAVEL ADVICE</a></li>
+                        <li><a href="#types">VLOG</a></li>
+                        <li><a href="#gallery">ABOUT</a></li>
+                        <li><a href="#foot">PLAN</a></li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
+<section class="hero">
+<h1>Spark curiosity and wanderlust:</h1>
+<h3>Escape the ordinary. Explore the extraordinary.Where will your next adventure take you?</h3>
+</section>    
+<section class="body">
+</section>
 </body>
 </html>
