--- a/TASK/Travel Site/index.html
+++ b/TASK/Travel Site/index.html
@@ -25,6 +25,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
+    
+    
 
 </head>
 <body>
@@ -41,17 +43,61 @@
                         <li><a href="#def">TRAVEL ADVICE</a></li>
                         <li><a href="#types">VLOG</a></li>
                         <li><a href="#gallery">ABOUT</a></li>
-                        <li><a href="#foot">PLAN</a></li>
+                        <li><a href="#foot">PLAN YOUR TRIP</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 <section class="hero">
-<h1>Spark curiosity and wanderlust:</h1>
-<h3>Escape the ordinary. Explore the extraordinary.Where will your next adventure take you?</h3>
+    <h1>Escape the Ordinary. Discover the Extraordinary.</h1>
+    <p>Crave adventure? Nomadic Winds curates unique trips. Explore hidden gems, connect with cultures, travel consciously.</p>
+    <button>Plan Your Trip</button>
 </section>    
-<section class="body">
+<section class="dest">
+    <h4 class="text-center">WHERE DO YOU WANT TO GO?</h4>
+    <div class="rows d-flex justify-content-evenly">
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/th-flag.gif" width="80px" height="54px">
+            <h5>Thailand</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/it-flag.gif" width="80px" height="54px">
+            <h5>Italy</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/ic-flag.gif" width="80px" height="54px">
+            <h5>Iceland</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/ja-flag.gif" width="80px" height="54px">
+            <h5>Japan</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/ca-flag.gif" width="80px" height="54px">
+            <h5>Canada</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/cy-flag.gif" width="80px" height="54px">
+            <h5>Cyprus</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/eg-flag.gif" width="80px" height="54px">
+            <h5>Egypt</h5>
+        </div>
+        <div class="location ">
+            <img src="https://www.worldometers.info/img/flags/gr-flag.gif" width="80px"height="54px">
+            <h5>Greece</h5>
+        </div>
+    </div>
+    <div class="destin d-flex">
+        <div class="map"><img src="./locations/Earth.png" width="700px" alt=""></div>
+        <div class="discover my-5">
+            <h1>Discover The World</h1>
+            <p>We have written over 600+ travel guides and backpacking itineraries to provide all the information you need to help plan your dream trip around the world.</p>
+            <button class="">EXPLORE DESTINATIONS<i class="fa-solid fa-arrow-right ps-2"></i></button>
+        </div>
+    </div>
 </section>
 </body>
 </html>
