--- a/03_CSS/DAY_04/Book_Gallery/Index.html
+++ b/03_CSS/DAY_04/Book_Gallery/Index.html
@@ -47,7 +47,34 @@
             <center><a href="https://www.amazon.in/dp/1999872223/ref=sspa_dk_detail_5?psc=1&s=books&sp_csd=d2lkZ2V0TmFtZT1zcF9kZXRhaWw"><button>Buy Now</button></a></center>
         </div>
     </div>
-    <video src="./Videos/188710-883612324_small.mp4" width="100%" autoplay loop></video>
+    <div id="main">
+        <div class="cols">
+            <img src="https://m.media-amazon.com/images/I/81l3rZK4lnL._SY466_.jpg" alt="">
+            <h2>IKIGAI</h2>
+            <h3>Price: ₹367.99</h3>
+            <center><a href="https://www.amazon.in/Ikigai-H%C3%A9ctor-Garc%C3%ADa/dp/178633089X/ref=sr_1_1_sspa?s=books&sr=1-1-spons&sp_csd=d2lkZ2V0TmFtZT1zcF9hdGY&psc=1"><button>Buy Now</button></a></center>
+        </div>
+        <div class="cols">
+            <img src="https://m.media-amazon.com/images/I/413OgI8KzuL._SY445_SX342_.jpg" alt="">
+            <h2>YOU ONLY LIVE ONCE</h2>
+            <h3>Price: ₹174</h3>
+            <center><a href="https://www.amazon.in/ONLY-LIVE-ONCE-STUTI-CHANGLE/dp/0143453580/ref=sr_1_18?s=books&sr=1-18"><button>Buy Now</button></a></center>
+        </div>
+        <div class="cols">
+            <img src="https://m.media-amazon.com/images/I/818xi67HHtL._SY466_.jpg" alt="">
+            <h2>Psychic Perception</h2>
+            <h3>Price: ₹277</h3>
+            <center><a href="https://www.amazon.in/Psychic-Perception-Magic-Extrasensory-Power/dp/8183224873/ref=zg-te-pba_d_sccl_3_18/257-7650808-2559965?pd_rd_i=8183224873&psc=1"><button>Buy Now</button></a></center>
+        </div>
+        <div class="cols">
+            <img src="https://m.media-amazon.com/images/I/416JeZoF8tL._SY445_SX342_.jpg" alt="">
+            <h2>he Alchemist</h2>
+            <h3>Price: ₹259</h3>
+            <center><a href="https://www.amazon.in/Alchemist-Paulo-Coelho/dp/8172234988/ref=sr_1_6?s=books&sr=1-6"><button>Buy Now</button></a></center>
+        </div>
+    </div>
+    <div class="vid"><video src="https://videos.pexels.com/video-files/4860897/4860897-uhd_2732_1440_25fps.mp4" width="100%" autoplay loop></video></div>
+    
     <!-- footer section -->
     <footer>
         <div class="row1">
