--- a/03_CSS/DAY_04/Book_Gallery/Index.html
+++ b/03_CSS/DAY_04/Book_Gallery/Index.html
@@ -73,16 +73,26 @@
             <center><a href="https://www.amazon.in/Alchemist-Paulo-Coelho/dp/8172234988/ref=sr_1_6?s=books&sr=1-6"><button>Buy Now</button></a></center>
         </div>
     </div>
-    <div class="vid"><video src="https://videos.pexels.com/video-files/4860897/4860897-uhd_2732_1440_25fps.mp4" width="100%" autoplay loop></video></div>
+    <div class="vid"><video src="https://cdn.pixabay.com/video/2016/09/02/4878-181170845_large.mp4" width="100%" autoplay loop></video></div>
     
     <!-- footer section -->
     <footer>
         <div class="row1">
-            <div class="col1">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31411.913093747837!2d76.1804166788277!3d10.222076953263622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b081bea3d5a8b29%3A0x4c3b722cea99e6b0!2sKodungallur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1716026087931!5m2!1sen!2sin" width="800px" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31411.913093747837!2d76.1804166788277!3d10.222076953263622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b081bea3d5a8b29%3A0x4c3b722cea99e6b0!2sKodungallur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1716026087931!5m2!1sen!2sin" width="500px" height="300px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="col2">
-                <h3>Contact us</h3>
+            <div class="addr">
+                <h1>Location</h1>
+                <h4>Books Gallery</h4>
+                <p>21 Arcade Towers,</p>
+                <p>St.Peters road,</p>
+                <p>Kodugaloor, Angamaly</p>
+                <br>
+                <h3>Open Hours</h3>
+                <p>9.00 AM to 7.00 PM</p>
+            </div>
+            <div class="addr">
+                <h1>Contact us</h1>
                 <h4>Books Gallery</h4>
                 <p>PH: 953596458265</p>
                 <p>Address: kodugaloor</p>
